# commit-critic

./: .env.example  .gitignore  Makefile  README.md  commit_critic.py  langgraph.json  pyproject.toml  requirements.txt
commit_critic/: __init__.py  cli.py  commit_critic_agent.py  graph.py  models.py  prompts.py  subagents.py  tools.py
docs/: architecture.excalidraw
test-examples/: README.md  local-repo-analysis.md  remote-url-analysis.md
