[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-critic"
version = "0.1.0"
description = "AI-powered commit message analyzer using LangGraph Deep Agents"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Rajath Bharadwaj"}
]
keywords = ["git", "commit", "ai", "langgraph", "langchain", "deepagents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "deepagents>=0.1.0",
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-sqlite>=2.0.0",
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "langgraph-cli>=0.1.0",
]

[project.scripts]
commit-critic = "commit_critic.cli:main"

[project.urls]
Homepage = "https://github.com/Rajathbharadwaj/commit-critic"
Repository = "https://github.com/Rajathbharadwaj/commit-critic"

[tool.setuptools.packages.find]
where = ["."]
include = ["commit_critic*"]
